--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </aside>
 
         <footer class="footer">
-            <p> Pagina exemblo 2023</p>
+            <p> Pagina exemplo 2023</p>
         </footer>
     </div>
 </body>
