--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="estrutura">
-        <header class="header">
+        <header class="header gradiente-roxo">
             <a href="#" class="logo"><img src="./img/wildbeast.svg" alt="logo"></a>
             <nav>
                 <ul>
