--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="header gradiente-roxo">
             <a href="#" class="logo"><img src="./img/wildbeast.svg" alt="logo"></a>
             <nav>
-                <ul>
+                <ul class="header-menu">
                     <li><a href="#">Sobre</a></li>
                     <li><a href="#">Animais</a></li>
                     <li><a href="#">Contato</a></li>
@@ -27,6 +27,7 @@
                 <li><a href="#"><img src="./img/icones/vaca.svg" alt="vaca"></a></li>
                 <li><a href="#"><img src="./img/icones/ovelha.svg" alt="ovelha"></a></li>
                 <li><a href="#"><img src="./img/icones/abelha.svg" alt="abelha"></a></li>
+            
             </ul>
         </nav>
 
