anuncios e footer terminado

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
         </aside>
 
-        <footer class="footer">
+        <footer class="footer gradiente-roxo">
             <p> Pagina exemplo 2023</p>
         </footer>
     </div>
