--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
             </div>
 
             <div class="caracteristicas">
-                <div>
+                <div class="gradiente-roxo">
                     <span class="numero">72</span>
                     <span class="rotulo">kg</span>
                 </div>
+                <div class="gradiente-roxo">
+                    <span class="numero">13</span>
+                    <span class="rotulo">idade</span>
+                </div>
             </div>
-            <div>
-                <span class="numero">13</span>
-                <span class="rotulo">idade</span>
-            </div>
+          
 
             <p class="coluna-wide">É um sobrevivente da Era do Gelo, oringináo do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos fenéticos reafirmam que o lobo cinzento é ancestral do cão doméstico </p>
 
